fixed some layout issues

--- a/client/src/components/Home/homepage.css
+++ b/client/src/components/Home/homepage.css
@@ -16,8 +16,13 @@
   margin-bottom: 65px;
 }
 
+.post-image-div {
+  width: 615px;
+  border: 1px solid rgb(239, 239, 239);
+}
+
 .post-image {
-  max-width: 615px;
+  width: 100%;
   max-height: 615px;
   object-fit: contain;
 }
@@ -27,11 +32,13 @@
 }
 
 .actions {
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
+
 .action {
   margin-right: 15px;
 }
+
 .action:last-child {
   float: right;
   margin-right: 0;
@@ -43,11 +50,14 @@
   color: #999999;
 }
 
-.add-comment {
+.add-comment-form {
   border-top: 1px solid rgb(239, 239, 239);
-  width: 100%;
-  padding: 20px 0 10px;
   margin-top: 4px;
+  padding: 10px 0 0;
+}
+
+.add-comment {
+  width: 100%;
   color: #262626;
   height: 23px;
   font-size: 12px;
@@ -82,7 +92,7 @@
   #posts {
     width: 100%;
   }
-  img {
+  .post-image {
     width: 100%;
   }
 }
